fix overflow

--- a/src/entity/Article/ui/ArticleItem/ArticleItem.module.scss
+++ b/src/entity/Article/ui/ArticleItem/ArticleItem.module.scss
@@ -1,12 +1,4 @@
 .big {
-    .content {
-        padding: 8px 8px 50px;
-    }
-
-    .paragraph {
-        padding-bottom: 10px;
-    }
-
     .footer {
         padding: 8px;
     }
@@ -22,6 +14,24 @@
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
+    }
+
+    .content {
+        max-height: 200px;
+        overflow: hidden;
+        position: relative;
+        padding: 0 8px;
+
+        &::after {
+            content: "";
+            display: block;
+            inset: 0;
+            top: auto;
+            height: 10px;
+            width: 100%;
+            background: linear-gradient(transparent, var(--inverted-bg-color));
+            position: absolute;
+        }
     }
 }
 
